--- a/HyAPI.lpi
+++ b/HyAPI.lpi
@@ -6,7 +6,7 @@
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="Hypixel API"/>
+      <Title Value="HyAPI"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
@@ -37,12 +37,12 @@
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="hypixelapi.pas"/>
+        <Filename Value="HyAPI.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="HypixelAPI"/>
+        <UnitName Value="HyAPI"/>
       </Unit1>
     </Units>
   </ProjectOptions>
