--- a/HyAPI.lpi
+++ b/HyAPI.lpi
@@ -37,12 +37,12 @@
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="HyAPI.pas"/>
+        <Filename Value="hypixelapi.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="HyAPI"/>
+        <UnitName Value="HypixelAPI"/>
       </Unit1>
     </Units>
   </ProjectOptions>
